--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     /* Header */
     header {
-        background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('logo2.png') no-repeat center center/cover;
+        background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://github.com/beltmkt/jkmaquinas/blob/a664e9f42f8b94d9584c4361b127aae6d2d20ac5/logo2.png') no-repeat center center/cover;
 
         height: 100vh;
         min-height: 600px;
