--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     /* Header */
     header {
-        background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://github.com/beltmkt/jkmaquinas/blob/a664e9f42f8b94d9584c4361b127aae6d2d20ac5/logo2.png') no-repeat center center/cover;
+        background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),  <img src="lavadora.png" alt="Lavadoras" class="service-img"> no-repeat center center/cover;
 
         height: 100vh;
         min-height: 600px;
@@ -1076,7 +1076,7 @@
                         </div>
                         <div class="contact-text">
                             <h4>Área de Atendimento</h4>
-                            <p>São Paulo e Grande ABC</p>
+                            <p>São Paulo | Grande ABC | Alto Tietê</p>
                         </div>
                     </div>
                     
