--- a/index.html
+++ b/index.html
@@ -909,7 +909,7 @@
    <header id="home">
         <!-- Imagem como tag HTML -->
         <img 
-            src="conserto.png" 
+            src="logo2.png" 
             alt="JK Máquinas - Assistência Técnica" 
             class="header-img"
         >
