--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="J6q_oqugQm0r0zf40W6zfEOn5W6IJXvnsxvI18D9Leo" />
     <meta name="description" content="Serviços especializados em conserto e manutenção de eletrodomésticos com garantia, rapidez e preço justo. Atendimento em toda região.">
     <meta name="keywords" content="conserto, manutenção, lavadora, geladeira, ar-condicionado, microondas, assistência técnica, eletrodomésticos">
     <meta name="google-site-verification" content="Qmc2wbkcrJpc8ExMmw0G7i_Tqeo85wRFhE9j_5bJ2mc" />
