--- a/index.html
+++ b/index.html
@@ -1107,7 +1107,7 @@
                         </div>
                         <div class="contact-text">
                             <h4>Área de Atendimento</h4>
-                            <p>São Paulo e Grande ABC</p>
+                            <p>São Paulo | Grande ABC | Alto Tietê</p>
                         </div>
                     </div>
                     
