--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="J6q_oqugQm0r0zf40W6zfEOn5W6IJXvnsxvI18D9Leo" />
     <meta name="description" content="Serviços especializados em conserto e manutenção de eletrodomésticos com garantia, rapidez e preço justo. Atendimento em toda região.">
-    <meta name="keywords" content="conserto, manutenção, lavadora, geladeira, ar-condicionado, microondas, assistência técnica, eletrodomésticos">
+    <meta name="keywords" content="conserto, manutenção, lavadora, geladeira, ar-condicionado, microondas, assistência técnica, eletrodomésticos, lava e seca, tanquinho">
     <meta name="google-site-verification" content="Qmc2wbkcrJpc8ExMmw0G7i_Tqeo85wRFhE9j_5bJ2mc" />
     <title>JK Máquinas | Assistência Técnica Especializada em Eletrodomésticos</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -939,7 +939,7 @@
                     <img src="lavadora.png" alt="Lavadoras" class="service-img">
                     <div class="service-content">
                         <h3 class="service-title">Lavadoras</h3>
-                        <p class="service-description">Conserto especializado em todas as marcas e modelos de máquinas de lavar.</p>
+                        <p class="service-description">Conserto especializado em todas as marcas e modelos de máquinas de lavar, lava e seca, tanquinhos e etc.</p>
                         <a href="#" class="service-btn" onclick="openModal('lavadora')">Saiba mais</a>
                     </div>
                 </div>
