--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="conserto, manutenção, lavadora, geladeira, ar-condicionado, microondas, assistência técnica, eletrodomésticos, lava e seca, tanquinho">
     <meta name="google-site-verification" content="Qmc2wbkcrJpc8ExMmw0G7i_Tqeo85wRFhE9j_5bJ2mc" />
     <title>JK Máquinas | Assistência Técnica Especializada em Eletrodomésticos</title>
+    <link rel="canonical" href="https://beltmkt.github.io/jkmaquinas/" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
