--- a/index.html
+++ b/index.html
@@ -651,6 +651,33 @@
         padding-top: 1.5rem;
         border-top: 1px solid rgba(255, 255, 255, 0.1);
     }
+        /* Estilos para o logo no footer */
+        .footer-logo {
+        width: 100%;
+        margin: 2rem 0;
+        padding: 1rem 0;
+        border-top: 1px solid rgba(255, 255, 255, 0.1);
+        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+        text-align: center; /* Centraliza elementos inline (texto) */
+        display: flex;
+        flex-direction: column;
+        align-items: center; /* Centraliza itens horizontalmente */
+    }
+    
+    .logo-belt {
+        max-width: 300px; /* Ajuste conforme necessário */
+        height: auto;
+        margin: 0 auto 0.5rem; /* Centraliza a imagem */
+        display: block; /* Garante que margens automáticas funcionem */
+    }
+    
+    .footer-logo p {
+        color: #ccc;
+        font-size: 0.9rem;
+        letter-spacing: 1px;
+        margin-top: 0.5rem;
+        text-align: center; /* Redundante, mas seguro */
+    }
 
     /* Modal */
     .modal {
