--- a/index.html
+++ b/index.html
@@ -1151,7 +1151,7 @@
                         </div>
                         <div class="contact-text">
                             <h4>Email</h4>
-                            <a href="mailto:jkmaquinas@gmail.com">jkmaquinas@gmail.com</a>
+                            <a href="mailto:Jkmaquinas.28@gmail.com">Jkmaquinas.28@gmail.com</a>
                         </div>
                     </div>
                     
@@ -1269,7 +1269,7 @@
                     <h3>Contato</h3>
                     <ul class="footer-links">
                         <li><a href="tel:+5511939397915">(11) 93939-7915</a></li>
-                        <li><a href="mailto:jkmaquinas@gmail.com">jkmaquinas@gmail.com</a></li>
+                        <li><a href="mailto:Jkmaquinas.28@gmail.com">Jkmaquinas.28@gmail.com</a></li>
                         <li>Suzano - SP</li>
                         <li>Atendemos em todas as regiões</li>
                     </ul>
