--- a/index.html
+++ b/index.html
@@ -1178,7 +1178,7 @@
 
         <div class="review-container">
             <p class="review-invite">Deixe seu depoimento também! ⭐</p>
-            <a href="https://www.google.com/maps/place/JK+M%C3%A1quinas/@-23.6824124,-46.5399359,17z/data=!4m8!3m7!1s0x4260a3f5784eb523:0xf5001eb5a8a1d579!8m2!3d-23.6824124!4d-46.5399359!9m1!1b1!16s%2Fg%2F11mct__5kb?entry=ttu4" 
+            <a href="https://share.google/HBIeRFulTHagI8l28" 
                 target="_blank" 
                 class="review-btn">
                 <span class="btn-content">
